# bioap-flask

./: .gitignore  BIOAP_ARCHITECTURE.md  README.md  main.py  pyproject.toml
app/: __init__.py  extensions.py
app/models/: __init__.py  profile.py  run.py  setting.py
app/routes/: __init__.py  analysis_routes.py  calibration_routes.py  history.py  pages.py  profiles.py  settings_routes.py
app/services/: __init__.py  analysis_engine.py  color_utils.py  image_utils.py  profile_service.py  seed.py  settings_service.py
instance/: bioap.sqlite
static/css/: theme.css
templates/: about.html  analysis.html  base.html  calibration.html  calibration_case_edit.html  calibration_setup.html  camera.html  history.html  history_detail.html  import_to_calibration.html  index.html  render_navbar.html  settings.html
