[project]
name = "bioap-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bootstrap-flask>=2.5.0",
    "flask>=3.1.2",
    "flask-session>=0.8.0",
    "flask-sqlalchemy>=3.1.1",
    "sqlalchemy>=2.0.36",
    "pillow>=10.4.0",
    "numpy>=2.1.3",
    "marshmallow>=3.22.0",
]
